@@ -122,10 +122,16 @@ server:
 	# target-fetch-policy: "3 2 1 0 0"
 	
 	# Harden against very small EDNS buffer sizes. 
-	# harden_short_bufsize: no
+	# harden-short-bufsize: no
 	
 	# Harden against unseemly large queries.
-	# harden_large_queries: no
+	# harden-large-queries: no
+	
+	# Do not query the following addresses. No DNS queries are sent there.
+	# List one address per entry. To block other ports than the default
+	# DNS port, use "1.2.3.4@123" to block port 123 for 1.2.3.4.
+	# do-not-query-address: 127.0.0.1
+	# do-not-query-address: ::1
 
 # Stub zones.
 # Create entries like below, to make all queries for 'example.com' and 
